# qe-gipaw

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  TODO  configure  configure.ac  makedeps.sh.in
GIPAW/: Makefile  README  TODO  ascheq.f90  biot_savart.f90  compute_u_kq.f90  core_relax.f90  efg.f90  epr_routines.f90  g_tensor_crystal.f90  gipaw_main.f90  gipaw_module.f90  greenfunction.f90  h_psiq.f90  hyperfine.f90  init_gipaw_1.f90  init_gipaw_2.f90  init_us_2_no_phase.f90  j_para.f90  make.depend  nmr_routines.f90  suscept_crystal.f90  symmetrize_field.f90  test_sum_rule.f90  util.f90  velocity.f90  write_tensor_field.f90
doc/: Makefile  user-manual.odt  user-manual.tex
examples/: README
examples/H2O+/: H2O+_g-tensor.in  H2O+_g-tensor.out  H2O+_hyperfine.in  H2O+_hyperfine.out  H2O+_scf.in  H2O+_scf.out
examples/H2O_environ/: H2O_nmr+PCM.com  H2O_nmr.com  H2O_nmr.in  H2O_nmr.out-vac  H2O_nmr.out-wat  H2O_scf.in  H2O_scf.out-vac  H2O_scf.out-wat  HOWTO_GIPAW+ENVIRON.txt  NMR_solvent.txt  environ.debug  environ.in  h2o.nmr.magres
examples/benzene-NCPP/: benzene-nmr.in  benzene-nmr.out  benzene-scf.in  benzene-scf.out  benzene.nmr.magres
examples/benzene-USPP/: benzene-nmr.in  benzene-nmr.out  benzene-scf.in  benzene-scf.out  benzene.nmr.magres
examples/quartz/: quartz-efg.in  quartz-efg.out  quartz-nmr.in  quartz-nmr.out  quartz-scf.in  quartz-scf.out  quartz.efg.magres  quartz.nmr.magres
examples/quartz-ncpp/: quartz-efg.out  quartz-nmr.out  quartz-scf.in  quartz-scf.out  quartz.efg.magres  quartz.nmr.magres
examples/urea/: urea-nmr.in  urea-relax.out  urea.nmr.magres
pseudo/: B.pbe-rrkjus-gipaw-dc.UPF  B.pbe-tm-gipaw.UPF  C.pbe-rrkjus-gipaw-dc.UPF  Ce.pbe-tm-semi-dc-dipaw.UPF  Cl.pbe-tm-gipaw.UPF  H.pbe-rrkjus-gipaw-dc.UPF  K.pbe-tm-gipaw-dc.UPF  Li.pbe-tm-gipaw.UPF  N.pbe-rrkjus-gipaw-dc.UPF  N.pbe-tm-gipaw.UPF  O.GGA-PBESOL-paw.UPF  O.pbe-rrkjus-gipaw-dc.UPF  O.pbe-tm-new-gipaw-dc.UPF  Si.GGA-PBESOL-paw.UPF  Si.pbe-tm-gipaw.UPF
schema/: generate_qes_libs_modules.py  gipaw_xmlschema.xsd  gipaw_xmlschema_import.xsd  gipaw_xmlschema_import_local.xsd  gipawxml_dump.py  gipawxml_to_namelist.py  qes_211101.xsd  validate.sh
schema/examples/: benzene-gipaw.xml  benzene.xml  quartz-gipaw.xml  quartz.xml
src/: Makefile  Makefile-gpu.in  Makefile.in  add_vuspsi.f90  ascheq.f90  atomic.f90  biot_savart.f90  cgsolve_all.f90  ch_psi_all.f90  compute_u_kq.f90  core_relax.f90  efg.f90  epr_routines.f90  gipaw_main.f90  gipaw_module.f90  gipaw_results.f90  gipaw_routines.f90  gipaw_routines_bands.f90  gipaw_setup.f90  gipaw_version.f90  greenfunction.f90  h_psiq.f90  hyperfine.f90  init_gipaw_1.f90  init_gipaw_2.f90  init_us_2_no_phase.f90  j_para.f90  knight_shift.f90  make.depend  mossbauer.f90  nmr_routines.f90  orthoatwfc1.f90  output_magres.f90  paw_gipaw.f90  qes_reset_module.f90  qes_write_module.f90  qesgipaw_bcast_module.f90  qesgipaw_init_module.f90  qesgipaw_libs_module.f90  qesgipaw_read_module.f90  (+13 more)
tests/: README  run_all_tests.py  tests-7.5.out  version.in
tests/EFG/: pseudo  quartz-efg.out-4cpu-2pool  quartz-efg.out-4cpu-4pool  quartz-scf.out-4cpu-1pool  quartz-scf.out-4cpu-2pool  quartz-scf.out-serial
tests/EPR/: GTENSOR.txt  KCl_O2-gtensor.out_4cpu  KCl_O2-hyperfine.out_4cpu  KCl_O2-scf.out_4cpu  run_tests.sh
tests/Hubbard/: CeO2-nmr-U0.out  CeO2-nmr-U5.out  CeO2-scf-U0.out  CeO2-scf-U5.out  (+2 more)
tools/: EPR_diagonalize_g-tensor.py  NMR_tensor-convention.py
(+610 files in other folders)
